# pyCEC

./: .codeclimate.yml  .coveragerc  .coveralls.yml  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.md  README.rst  _config.yml  addon.xml  kodi_cec.py  lint_requirements.txt  pycec.service  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  kodi.yml
libs/: cec.py  libcec.so.6.0.2
pycec/: __init__.py  __main__.py  cec.py  commands.py  const.py  datastruct.py  network.py  server.py  tcp.py
resources/: settinfs.xml  settings.xml
resources/language/resource.language.en_gb/: strings.po 
scripts/: travis.sh
tests/: __init__.py  test.py  test_cecClient.py  test_cecCommand.py  test_hdmiDevice.py  test_hdmiNetwork.py  test_hdmi_device.py  test_hdmi_network.py  test_physicalAddress.py
tests/datastruct/: test_cecCommand.py  test_cec_command.py  test_physicalAddress.py  test_physical_address.py
