[build-system]
requires = ["hatchling", "pytest"]
build-backend = "hatchling.build"

[project]
name = "pyCEC"
version = "0.6.0"
description = "Provide HDMI CEC devices as objects, especially for use with Home Assistant"
authors = [
    { name = "Petr Vraník", email = "hpa@suteren.net" }
]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Topic :: Home Automation",
    "Topic :: Multimedia",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "libcec",
    "cec",
    "hdmi",
    "home-assistant",
    "kodi",
    "xbmc",
]

[project.optional-dependencies]
dev = [
    "Kodistubs>=20.0.0",
]
lint = [
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.3",
    "black>=23.0.0",
    "flake8-bugbear==20.1.4",
    "pep8-naming==0.11.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coveralls>=2.1.2",
]

[project.urls]
Homepage = "https://github.com/konikvranik/pyCEC/"
Issues = "https://github.com/konikvranik/pyCEC/issues"

[project.scripts]
pycec = "pycec.__main__:main"

[tool.pytest]
addopts = "--verbose"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160
exclude = [".venv/", ".git/", "__pycache__/", "*.egg-info"]
